--- a/package.json
+++ b/package.json
@@ -5,28 +5,45 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@tanstack/react-query": "^5.4.3",
+    "js-cookie": "^3.0.5",
+    "million": "^2.6.4",
     "next": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-transition-group": "^4.4.5",
+    "sharp": "^0.33.2",
+    "zod": "^3.22.4",
     "zustand": "^4.4.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.7",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "@types/react-transition-group": "^4.4.9",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "^14.0.1",
     "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "sass": "^1.69.5",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
