--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-transition-group": "^4.4.5",
     "sharp": "^0.33.2",
