--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
+    "react-sortablejs": "^6.1.4",
     "react-transition-group": "^4.4.5",
     "sharp": "^0.33.2",
+    "sortablejs": "^1.15.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.5"
   },
@@ -36,6 +38,7 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@types/react-transition-group": "^4.4.9",
+    "@types/sortablejs": "^1.15.8",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "^14.0.1",
